tests/ui/parser/raw/raw-literal-underscore.rs
fn main() {
    let r#_: ();
    //~^ ERROR `_` cannot be a raw identifier
}

// ferrocene-annotations: fls_usr6iuwpwqqh
// Raw String Literals
